--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,3 +1,4 @@
 target_include_directories(PoeIndexer PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
 add_subdirectory(simdjson)
+add_subdirectory(moodycamel)
